2011-04-01 Alexandru Csete <oz9aec at gmail.com>

    * src/pass-to-txt.c
    * src/sat-pass-dialogs.c
    * src/gtk-rig-ctrl.c
    * src/gtk-event-list.c
    * src/gtk-rot-ctrl.c
    * src/gtk-polar-view.c
    Appied patch 3261586: Remove leading zero code from time formatting
    functions (thanks to Paul Schulz).


2011-03-28 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rig-ctrl.c
    * src/gtk-rot-ctrl.c
    Apply Stephane Fillods patch to repair Win32 networking.

    * src/gtk-sat-selector.c
    Remove strverscmp reference.

2011-03-27 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-azel-plot.c
    * src/gtk-polar-plot.c
    * src/gtk-polar-view-popup.c
    * src/gtk-polar-view.c
    * src/gtk-sat-list.c
    * src/gtk-sat-module.c
    * src/gtk-sat-selector.c
    * src/gtk-single-sat.c
    * src/gtk-sky-glance.c
    * src/pass-to-txt.c
    * src/sat-pass-dialogs.c
    * src/time-tools.c
    * src/time-tools.h
    Rename julian_print_time daynum_to_str.

2011-03-26 Charles Suprin <hamaa1vs at gmail.com>

    * src/predict-tools.c
    Change get_current_pass to log error if returned pass is not current.

    * src/gtk-polar-view.c
    * src/gtk-sat-list.c
    * src/gtk-sat-map.c
    * src/gtk-sat-selector.c
    * src/sat-pass-dialogs.c
    Clean up compiler warnings.


2011-03-25 Charles Suprin <hamaa1vs at gmail.com>

    * AUTHORS
    * src/about.c
    * src/Makefile.am
    * src/menubar.c
    * src/mod-cfg.c
    * src/gpredict-utils.c
    * src/gpredict-utils.h
    * src/gtk-rig-ctrl.c
    * src/gtk-rot-ctrl.c
    * src/gtk-sat-selector.c
    * src/gtk-single-sat.c
    * src/strnatcmp.c
    * src/strnatcmp.h
    Added "natural comparison" by Martin Pool from patch 3237220 by Patrick Strasser.

2011-03-24 Charles Suprin <hamaa1vs at gmail.com>

    * src/predict-tools.c
    Unify get_pass and get_pass_no_min_el to use common pass generator.


2011-03-22 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map.c